-Fixes and Updates
-Fixed issue where main Ethereum accounts list was having items deleted.
-Numerous UI fixes and tweaks:
1. Background color is white. More in line with industry standards.
Prior color also did not match with blue theme (not complementary color
or other standard).
2. Fixed Nav buttons to not text-wrap
3. Fixed font size of AdminPortal buttons so they are uniform
4. Fixed Zuess page titles so they are the same color as navbar. Colors
on a page should be repeating as we learned in UI design.
5. Fixed modal issue where "Close" button was not aligned with Submit
button on a few modals

--- a/Zuess_MVC_Application/src/main/resources/static/css/main.css
+++ b/Zuess_MVC_Application/src/main/resources/static/css/main.css
@@ -10,6 +10,7 @@
 	Text-Transform: uppercase;
 }
 
+/*
 body {
 	background-color: #dbdecc;
 }
@@ -18,6 +19,7 @@ body {
 	color: #777435;
 	text-transform: uppercase;
 }
+*/
 
 #disbox {
 	font-size: 150%;
@@ -39,7 +41,7 @@ body {
 }
 
 #jumbo {
-	color: #C2A756;
+	color: #112E51;
 }
 
 #bottom {
@@ -48,6 +50,7 @@ body {
 	text-align: center;
 }
 
+/* Looks more professional without the box
 .login {
 	padding: 0;
 	margin: 0;
@@ -56,6 +59,7 @@ body {
 	border-radius: 30px;
 	box-shadow: 12px 12px 22px;
 }
+*/
 
 img.resize {
 	max-width: 50%;
@@ -63,8 +67,8 @@ img.resize {
 }
 
 .login img {
-	border-top-left-radius: 30px;
-	border-bottom-left-radius: 30px;
+	border-top-left-radius: 0px;
+	border-bottom-left-radius: 0px;
 }
 
 .login h1 {
